--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
               <target>${source.and.target.JVM.version}</target>
             </configuration>
           </plugin>
-          <plugin>
+<!--          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>properties-maven-plugin</artifactId>
             <version>1.0.0</version>
@@ -56,7 +56,7 @@
                 </configuration>
               </execution>
             </executions>
-          </plugin>
+          </plugin>-->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
