Docker grid implementation

--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <cucumberVersion>6.9.1</cucumberVersion>
     <testngVersion>7.4.0</testngVersion>
     <seleniumVersion>3.141.59</seleniumVersion>
     <maven-compiler-pluginVersion>3.8.0</maven-compiler-pluginVersion>
-    <source.and.target.JVM.version>1.8</source.and.target.JVM.version>
+    <source.and.target.JVM.version>17</source.and.target.JVM.version>
     <org.apache.maven.plugins.maven-surefire-plugin.version>2.22.1</org.apache.maven.plugins.maven-surefire-plugin.version>
     <aspectj.version>1.9.5</aspectj.version>
   </properties>
@@ -39,6 +39,26 @@
               <encoding>UTF-8</encoding>
               <source>${source.and.target.JVM.version}</source>
               <target>${source.and.target.JVM.version}</target>
+              <fork>true</fork>
+              <compilerArgs>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+              </compilerArgs>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>org.projectlombok</groupId>
+                  <artifactId>lombok</artifactId>
+                  <version>1.18.16</version>
+                </path>
+            </annotationProcessorPaths>
             </configuration>
           </plugin>
 <!--          <plugin>
@@ -156,7 +176,7 @@
     <dependency>
       <groupId>tech.grasshopper</groupId>
       <artifactId>extent-pdf-report</artifactId>
-      <version>1.7.1</version>
+      <version>1.8.0</version>
     </dependency>
 
     <dependency>
